@@ -1,3 +1,4 @@
+* BUG#7885 Correction du comportement de la résiliation avec plusieurs périodes d'activation futures
 * BUG#7783 La date de fin de la garantie est limitée par la date de fin définitive du contrat plutôt que la date de fin courante
 * FEA#7737 Ajout de l'assistant 'Changer les détails du statut' sur les contrats actifs
 * BUG#7660 Ne pas modifier la raison et la date de fin de l'historique d'activation lors de la réactivation d'un contrat suspendu déjà renouvelé
